--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": 		"chucksplayground/wp-plugin-skeleton",
+    "name": 		"cprods/wp-plugin-skeleton",
     "description": 	"Wordpress plugin skeleton using namespaces and other PHP 7.4+ features",
     "type": 		"wordpress-plugin",
     "license": 		"MIT",
@@ -14,6 +14,6 @@
         }
     ],
     "autoload": {
-    	"psr-4": { 	"\\cPRODS\\WPPlugin\\": "app/" }
+    	"psr-4": { 	"\\CPRODS\\WPPlugin\\": "app/" }
     }
 }
