--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": 		"cprods/wp-plugin-skeleton",
-    "description": 	"Wordpress plugin skeleton using namespaces and other PHP 7.4+ features",
+    "name": 		"cprods/wp-plugin-library",
+    "description": 	"Wordpress plugin library using namespaces and other PHP 7.4+ features",
     "type": 		"wordpress-plugin",
     "license": 		"MIT",
     "require": {
